fixed a color contrast issue

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,8 @@
 }
 
 .char__font {
-    color: #191970;
+    color: rgba(255, 255, 255, 0.733);
     font-size: 3rem;
-    font-weight: lighter;
 }
 
 .char__font-about {
@@ -23,7 +22,7 @@
     color: #4545f0;
 }
 
-.span__underline-red {
+.span__underline-text {
     text-decoration: underline;
     text-decoration-color: #191970;
     text-decoration-thickness: 0.1rem;
